test/src/e2e_vm_tests/test_programs/should_fail/storage_ops_in_library/src/main.sw
script;

mod do_storage;

fn main() {
    do_storage::side_effects();
}
